fix printer tests