@@ -2,6 +2,7 @@ package edu.hw6.task4;
 
 import edu.hw6.CommonTemporaryDirectory;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import org.assertj.core.api.Assertions;
@@ -9,7 +10,8 @@ import org.junit.jupiter.api.Test;
 
 public class PrinterTest extends CommonTemporaryDirectory {
     private boolean tryToReadFile(Path path, String data) throws IOException {
-        return data.equals(new String(Files.readAllBytes(path)));
+        String actualData = Files.readString(path, StandardCharsets.UTF_8);
+        return data.equals(actualData);
     }
 
     @Test
@@ -18,7 +20,7 @@ public class PrinterTest extends CommonTemporaryDirectory {
         Printer.print(file);
         Assertions.assertThat(tryToReadFile(
             file,
-            "Programming is learned by writing programs. ― Brian Kernighan\r\n"
+            "Programming is learned by writing programs. ― Brian Kernighan" + System.lineSeparator()
         )).isTrue();
     }
 
@@ -29,7 +31,7 @@ public class PrinterTest extends CommonTemporaryDirectory {
         Printer.print(file);
         Assertions.assertThat(tryToReadFile(
             file,
-            "Programming is learned by writing programs. ― Brian Kernighan\r\n"
+            "Programming is learned by writing programs. ― Brian Kernighan" + System.lineSeparator()
         )).isTrue();
     }
 }
